tests/compile_errors/bad-fun-signature.buzz
fun bad() > {
    return 0;
}
